# delivery-app-ui

./: .gitignore  README.md  kivy-reloader.toml  main.py  pyproject.toml
delivery_app/: __init__.py
delivery_app/screens/: main_screen.py
delivery_app/screens/splash_screen/: __init__.py  splash_screen.kv  splash_screen.py
delivery_app/theme/: __init__.py  colors.py  fonts.py
delivery_app/uix/backdrop/: __init__.py  backdrop.kv  backdrop.py
delivery_app/uix/button/button_primary/: __init__.py  button_primary.kv  button_primary.py
delivery_app/uix/button/button_text/: __init__.py  button_text.kv  button_text.py
delivery_app/uix/debug_screen/: __init__.py  debug_screen.kv  debug_screen.py
scripts/: create_component.py  create_screen.py
