[tool.poetry]
name = "delivery-app-ui"
version = "0.1.0"
description = ""
authors = ["Kivy School"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kivy-reloader = "^0.4.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
taskipy = "^1.13.0"

[tool.ruff]
line-length = 79
extend-exclude = ['.venv']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
